--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@popperjs/core": "^2.10.1",
     "bootstrap": "^5.1.1",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
+    "serve-static": "^1.14.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
