--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "node server.js"
+    "deploy": "vue-cli-service build && yarn firebase deploy"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@popperjs/core": "^2.10.1",
     "bootstrap": "^5.1.1",
     "core-js": "^3.6.5",
-    "express": "^4.17.1",
-    "serve-static": "^1.14.1",
+    "firebase-tools": "^9.18.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
