--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "bootstrap": "^5.1.1",
     "core-js": "^3.6.5",
     "firebase-tools": "^9.18.0",
+    "moment": "^2.29.1",
+    "moment-countdown": "^0.0.3",
+    "moment-timer": "^1.3.0",
     "vue": "^3.0.0",
     "vuex": "^4.0.2"
   },
